--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,24 @@
 server {
     listen 80;
 
-    # User frontend
+    # ==== FRONTEND (React/Vite Build) ====
     location / {
         proxy_pass http://frontend:80;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Backend API
-    location /api {
+    # ==== BACKEND API ====
+    location /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
         proxy_pass http://backend:4000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
